@@ -1391,12 +1391,15 @@ void SubtitleView::select_and_set_cursor(const Gtk::TreeIter &iter, bool start_e
  */
 bool SubtitleView::on_key_press_event(GdkEventKey *event)
 {
-	bool is_num = utility::is_num(event->string);
-
-	// seulement si c'est different on met à jour
-	if(is_num != get_enable_search())
-		set_enable_search(is_num);
-	
+	if(event->string != NULL)
+	{
+		int num;
+		std::istringstream ss(event->string);
+		bool is_num = ss >> num != 0; 
+		// Update only if it's different
+		if(is_num != get_enable_search())
+			set_enable_search(is_num);
+	}
 	return Gtk::TreeView::on_key_press_event(event);
 }
 
