@@ -1,3 +1,10 @@
+2008-11-14  kitone  <kitone@gna.org>
+
+	* src/SubtitleView.cc:
+	* src/utility.cc:
+	* src/utility.h:
+	Move is_num code in SubtitleView.cc.
+
 2008-11-13  kitone  <kitone@gna.org>
 
 	* plugins/actions/about/About.cc:
